test/fail/import-component.mo
import P = "mo:⛔";

ignore P.componentCall(123);

assert false;
